--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "node-app",
   "version": "0.0.1",
   "description": "node app + docker container",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yinzer/node-app"
+  },
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
