--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "dave",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "lodash": "^3.10.1",
+    "morgan": "^1.6.1"
   }
 }
